foundations/aws/us-east-2/sandbox/aegershman-example-1/cluster/config/concourse-web/_ytt_lib/concourse-web/rendered.yml
apiVersion: v1
kind: Service
metadata:
  name: concourse-web-web
  labels:
    app: concourse-web-web
    chart: concourse-11.4.0
    release: concourse-web
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: atc
    port: 8080
    targetPort: atc
  selector:
    app: concourse-web-web
---
apiVersion: v1
kind: Service
metadata:
  name: concourse-web-web-worker-gateway
  labels:
    app: concourse-web-web
    chart: concourse-11.4.0
    release: concourse-web
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: worker-gateway
    port: 2222
    targetPort: tsa
  selector:
    app: concourse-web-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concourse-web-web
  labels:
    app: concourse-web-web
    chart: concourse-11.4.0
    release: concourse-web
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: concourse-web-web
      release: concourse-web
  template:
    metadata:
      labels:
        app: concourse-web-web
        release: concourse-web
      annotations:
        checksum/secrets: 29f482887c5f028c9df2d59537365734b54f12ad348e49eae0ac2f714ab8727e
        checksum/config: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
    spec:
      serviceAccountName: concourse-web-web
      containers:
      - name: concourse-web-web
        image: concourse/concourse:6.4.0
        imagePullPolicy: IfNotPresent
        args:
        - web
        ports:
        - name: atc
          containerPort: 8080
        - name: tsa
          containerPort: 2222
        - name: atc-debug
          containerPort: 8079
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/v1/info
            port: atc
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /api/v1/info
            port: atc
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: concourse-keys
          mountPath: /concourse-keys
          readOnly: true
        - name: auth-keys
          mountPath: /concourse-auth
          readOnly: true
      volumes:
      - name: concourse-keys
        secret:
          secretName: concourse-web-web
          defaultMode: 256
          items:
          - key: host-key
            path: host_key
          - key: session-signing-key
            path: session_signing_key
          - key: worker-key-pub
            path: worker_key.pub
      - name: auth-keys
        secret:
          secretName: concourse-web-web
          defaultMode: 256
          items: null
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: concourse-web-web
  labels:
    app: concourse-web-web
    chart: concourse-11.4.0
    release: concourse-web
    heritage: Helm
  annotations:
    kubernetes.io/ingress.class: nginx-public
spec:
  rules:
  - host: concourse.gershman.io
    http:
      paths:
      - backend:
          serviceName: concourse-web-web
          servicePort: 8080
